Envoy/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: gatewapitest
spec:
  parentRefs:
  - name: demo-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /gwapi
    backendRefs:
    - name: demo-web
      port: 80
